force-app/main/default/objects/Natterbox_Call_Reporting_Object__c/fields/Bridge_UUID__c.field-meta.xml
<CustomField>
    <fullName>Bridge_UUID__c</fullName>
    <description>Internal Use only. The unique identifier for a bridged leg of a call.</description>
    <inlineHelpText>Internal Use only. The unique identifier for a bridged leg of a call.</inlineHelpText>
    <label>Bridge UUID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>