force-app/main/default/objects/Natterbox_Call_Reporting_Object__c/fields/Call_Start_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Call_Start_Date_Time__c</fullName>
    <formula>DATETIMEVALUE(

DATETIMEVALUE((MID(CallStartDate__c,0,4)) &amp; &quot;-&quot; &amp; (MID(CallStartDate__c,6,2)) &amp; &quot;-&quot; &amp; (MID(CallStartDate__c,9,2)) &amp; &quot; &quot; &amp; (MID(CallStartDate__c,12,8)))

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Call Start Date (Date and Time)</label>
    <type>DateTime</type>
</CustomField>