force-app/main/default/objects/Natterbox_Call_Reporting_Object__c/fields/CallDirection__c.field-meta.xml
<CustomField>
    <fullName>CallDirection__c</fullName>
    <description>The direction, inbound or outbound, of the call.</description>
    <inlineHelpText>The direction, inbound or outbound, of the call.</inlineHelpText>
    <label>CallDirection</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Inbound</fullName>
            </value>
            <value>
                <fullName>Outbound</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>