force-app/main/default/objects/Natterbox_Call_Reporting_Object__c/fields/CalledNumberIn__c.field-meta.xml
<CustomField>
    <fullName>CalledNumberIn__c</fullName>
    <description>This is the number that the caller dialled to enter the Natterbox service.</description>
    <inlineHelpText>This is the number that the caller dialled to enter the Natterbox service. In all but very rare occasions, this will be the same as the CalledNumber</inlineHelpText>
    <label>CalledNumberIn</label>
    <type>Phone</type>
</CustomField>