force-app/main/default/objects/Natterbox_Call_Reporting_Object__c/fields/CalledRoaming__c.field-meta.xml
<CustomField>
    <fullName>CalledRoaming__c</fullName>
    <description>If the person being called is on a mobile phone that is roaming, this will be the short counrty code that the user is currently in.</description>
    <inlineHelpText>If the person being called is on a Natterbox mobile phone that is roaming, this will be the short country code that the user is currently in. If the call recipient is not on a Natterbox mobile, this field will be left blank.</inlineHelpText>
    <label>CalledRoaming</label>
    <length>100</length>
    <type>Text</type>
</CustomField>