force-app/main/default/objects/Natterbox_Call_Reporting_Object__c/fields/CallEndDate__c.field-meta.xml
<CustomField>
    <fullName>CallEndDate__c</fullName>
    <description>Date and time the call ended.</description>
    <inlineHelpText>Date and time the call ended. In the format of: 2014-01-23 19:07:09</inlineHelpText>
    <label>CallEndDate</label>
    <length>100</length>
    <type>Text</type>
</CustomField>