force-app/main/default/objects/Natterbox_Call_Reporting_Object__c/fields/CallerCountryShort__c.field-meta.xml
<CustomField>
    <fullName>CallerCountryShort__c</fullName>
    <description>The short country code of the caller (if known)</description>
    <inlineHelpText>The three digit short country code of the caller (if known). For example: GBR for the United Kingdom.</inlineHelpText>
    <label>CallerCountryShort</label>
    <length>100</length>
    <type>Text</type>
</CustomField>