force-app/main/default/objects/Natterbox_Call_Reporting_Object__c/fields/CallerGroup__c.field-meta.xml
<CustomField>
    <fullName>CallerGroup__c</fullName>
    <description>Name of the Natterbox Group that the caller is a member of.</description>
    <inlineHelpText>If the caller is a Natterbox User, this will be their primary group as it appears in the Natterbox Portal. If they are an external caller, or have no groups assigned in the Natterbox Portal, this field will be left blank.</inlineHelpText>
    <label>CallerGroup</label>
    <length>100</length>
    <type>Text</type>
</CustomField>