force-app/main/default/objects/Natterbox_Call_Reporting_Object__c/fields/CallerLastName__c.field-meta.xml
<CustomField>
    <fullName>CallerLastName__c</fullName>
    <description>Caller Last Name (If Known)</description>
    <inlineHelpText>If the caller is a Natterbox User, this will be their last name as it appears in the Natterbox Portal. If they are an external caller, this field will be left blank. NOTE: This name is NOT pulled from Salesforce but from the Natterbox system.</inlineHelpText>
    <label>CallerLastName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>