force-app/main/default/objects/Natterbox_Call_Reporting_Object__c/fields/CallerNumber__c.field-meta.xml
<CustomField>
    <fullName>CallerNumber__c</fullName>
    <description>Number of the Caller</description>
    <inlineHelpText>The phone number of the caller in domestic format. If the caller is a Natterbox user, this will be their 4 digit extension number rather than their external number. If you need the Natterbox user&apos;s external number, use the E164CallerNumber field instead.</inlineHelpText>
    <label>CallerNumber</label>
    <type>Phone</type>
</CustomField>