force-app/main/default/objects/Natterbox_Call_Reporting_Object__c/fields/CallerRoaming__c.field-meta.xml
<CustomField>
    <fullName>CallerRoaming__c</fullName>
    <description>If the calling is connecting from a roaming mobile phone, this will be the short code of the country that caller is comming from (If known)</description>
    <inlineHelpText>If the caller is on a Natterbox mobile phone that is roaming, this will be the short country code that the user is currently in. If the call recipient is not on a Natterbox mobile, this field will be left blank.</inlineHelpText>
    <label>CallerRoaming</label>
    <length>100</length>
    <type>Text</type>
</CustomField>