force-app/main/default/objects/Natterbox_Call_Reporting_Object__c/fields/CallerType__c.field-meta.xml
<CustomField>
    <fullName>CallerType__c</fullName>
    <description>Type of the Caller. Device, User or External</description>
    <inlineHelpText>The Type of caller:
User: A Natterbox User
Device: A VOIP Phone
External: Phone call from an external source.</inlineHelpText>
    <label>CallerType</label>
    <length>100</length>
    <type>Text</type>
</CustomField>