force-app/main/default/objects/Natterbox_Call_Reporting_Object__c/fields/CallHuntSeconds__c.field-meta.xml
<CustomField>
    <fullName>CallHuntSeconds__c</fullName>
    <description>Total time the call was hunting in seconds.</description>
    <inlineHelpText>If the call was inbound and placed in a queue before being answered, this will be the time time the call was on hold before it was answered. If the call was outbound, this will be the same as CallRingSeconds.</inlineHelpText>
    <label>CallHuntSeconds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>