force-app/main/default/objects/Natterbox_Call_Reporting_Object__c/fields/CallStartDate__c.field-meta.xml
<CustomField>
    <fullName>CallStartDate__c</fullName>
    <description>Date and time the call started.</description>
    <inlineHelpText>Date and time the call sarted. In the format of: 2014-01-23 19:07:09</inlineHelpText>
    <label>CallStartDate</label>
    <length>100</length>
    <type>Text</type>
</CustomField>