force-app/main/default/objects/Natterbox_Call_Reporting_Object__c/fields/CallTotalTalkSeconds__c.field-meta.xml
<CustomField>
    <fullName>CallTotalTalkSeconds__c</fullName>
    <description>This is the total time the other party spent talking to your company. This includes talk time from multiple users if the call was transferred.</description>
    <inlineHelpText>This is the total time the other party spent talking to your company. This includes talk time from multiple users if the call was transferred.</inlineHelpText>
    <label>CallTotalTalkSeconds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>