force-app/main/default/objects/Natterbox_Call_Reporting_Object__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This is the case that was related to the call (If applicable)</inlineHelpText>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Natterbox Call Reporting Object</relationshipLabel>
    <relationshipName>Natterbox_Call_Reporting_Object</relationshipName>
    <type>Lookup</type>
</CustomField>