force-app/main/default/objects/Natterbox_Call_Reporting_Object__c/fields/ConnectedEmailAddress__c.field-meta.xml
<CustomField>
    <fullName>ConnectedEmailAddress__c</fullName>
    <description>This is the email address of the user that the call was connected to (as configured in the Natterbox portal)</description>
    <inlineHelpText>If the recipient is a Natterbox User, this will be their email address as it appears in the Natterbox Portal. If this is an external call, this field will be left blank. NOTE: This address is NOT pulled from Salesforce but from the Natterbox system.</inlineHelpText>
    <label>ConnectedEmailAddress</label>
    <type>Email</type>
</CustomField>