force-app/main/default/objects/Natterbox_Call_Reporting_Object__c/fields/ConnectedFirstName__c.field-meta.xml
<CustomField>
    <fullName>ConnectedFirstName__c</fullName>
    <description>This is the first name of the user that answered the call.</description>
    <inlineHelpText>If the call recipient is a Natterbox User, this will be their first name as it appears in the Natterbox Portal. If the call is outbound to an external number, this will be blank. NOTE: This name is NOT pulled from Salesforce but from the Natterbox system.</inlineHelpText>
    <label>ConnectedFirstName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>