force-app/main/default/objects/Natterbox_Call_Reporting_Object__c/fields/ConnectedGroup__c.field-meta.xml
<CustomField>
    <fullName>ConnectedGroup__c</fullName>
    <description>If the user the call is connected to is a member of a group, their group name is put here.</description>
    <inlineHelpText>If the caller is a Natterbox User, this will be their primary group as it appears in the Natterbox Portal. If this is an outbound call to an external number, or have no groups assigned in the Natterbox Portal, this field will be left blank.</inlineHelpText>
    <label>ConnectedGroup</label>
    <length>100</length>
    <type>Text</type>
</CustomField>