force-app/main/default/objects/Natterbox_Call_Reporting_Object__c/fields/ConnectedNumber__c.field-meta.xml
<CustomField>
    <fullName>ConnectedNumber__c</fullName>
    <description>If the call was passed on to an external PSTN number, the number will be shown here.</description>
    <inlineHelpText>This will be the phone number of the person that answered the call (This may well be different to CalledNumber, depending on call dialplan routing). If the call recipient was a Natterbox user, this will show their 4 digit extension number.</inlineHelpText>
    <label>ConnectedNumber</label>
    <type>Phone</type>
</CustomField>