force-app/main/default/objects/Natterbox_Call_Reporting_Object__c/fields/Connnected_User_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Connnected_User_Full_Name__c</fullName>
    <inlineHelpText>If the call recipient is a Natterbox User, this will be their full name as it appears in the Natterbox Portal. If this is an outbound external call, this field will be left blank. NOTE This name is NOT pulled from Salesforce but from the Natterbox system.</inlineHelpText>
    <label>Connected User Full Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>