force-app/main/default/objects/Natterbox_Call_Reporting_Object__c/fields/CTI_Activity_Created__c.field-meta.xml
<CustomField>
    <fullName>CTI_Activity_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>With Natterbox Voice Intelligence, it maybe the case that only a subset of calls also have an activity created by the CTI. Call that have a corresponding activity will have this checkbox ticked.</inlineHelpText>
    <label>CTI Activity Created</label>
    <type>Checkbox</type>
</CustomField>