force-app/main/default/objects/Natterbox_Call_Reporting_Object__c/fields/CTI_Activity_Link__c.field-meta.xml
<CustomField>
    <fullName>CTI_Activity_Link__c</fullName>
    <inlineHelpText>If the call has an associated activity, a link to it will be in this box.</inlineHelpText>
    <label>CTI Activity Link</label>
    <type>Url</type>
</CustomField>