force-app/main/default/objects/Natterbox_Call_Reporting_Object__c/fields/Day_of_the_Month__c.field-meta.xml
<CustomField>
    <fullName>Day_of_the_Month__c</fullName>
    <inlineHelpText>The day of the month that the call happened. This will return the numeric value for the day of the month.</inlineHelpText>
    <label>Day of the Month</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>