force-app/main/default/objects/Natterbox_Call_Reporting_Object__c/fields/Day_of_the_Week__c.field-meta.xml
<CustomField>
    <fullName>Day_of_the_Week__c</fullName>
    <inlineHelpText>The day of the week (in text, eg, Monday, Tuesday, etc) that the call took place.</inlineHelpText>
    <label>Day of the Week</label>
    <length>20</length>
    <type>Text</type>
</CustomField>