force-app/main/default/objects/Natterbox_Call_Reporting_Object__c/fields/DemoDate__c.field-meta.xml
<CustomField>
    <fullName>DemoDate__c</fullName>
    <formula>CASE((VALUE(MID(TEXT( Call_Start_Date_Time__c ),12,2)))+ Timezone_Offset__c,
-15, 9,
-14, 10,
-13, 11,
-12, 12,
-11, 13,
-10, 14,
-9, 15,
-8, 16,
-7, 17,
-6, 18,
-5, 19,
-4, 20,
-3, 21,
-2, 22,
-1, 23,
0, 0,
1, 1,
2, 2,
3, 3,
4, 4,
5, 5,
6, 6,
7, 7,
8, 8,
9, 9, 
10, 10,
11, 11,
12, 12,
13, 13,
14, 14,
15, 15, 
16, 16, 
17, 17, 
18, 18, 
19, 19, 
20, 20, 
21, 21,
22, 22,
23, 23,
24, 0,
25, 1,
26, 2, 
27, 3,
28, 4, 
29, 5,
30, 6,
31, 7,
32, 8,
33, 9,
34, 10,
35, 11,
36, 12,
37, 13,
38, 14,
39, 15,
40, 16,
999999)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DemoDate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>