force-app/main/default/objects/Natterbox_Call_Reporting_Object__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <inlineHelpText>This is the department the user belongs to in Salesforce. If the user&apos;s department is blank in Salesforce, this filed will be blank too. If Natterbox is unable to find a corresponding Salesforce user for this call, this field will be left blank.</inlineHelpText>
    <label>Department</label>
    <length>30</length>
    <type>Text</type>
</CustomField>