force-app/main/default/objects/Natterbox_Call_Reporting_Object__c/fields/DialledNumber__c.field-meta.xml
<CustomField>
    <fullName>DialledNumber__c</fullName>
    <description>This is the number that was called by the caller. This can be an internal or an external number.</description>
    <inlineHelpText>The actual digits tapped into the phone by the caller. For internal calls, this can also show the extension number dialed. This may be different to ConnectedNumber, depending on dialplan rules.</inlineHelpText>
    <label>DialledNumber</label>
    <type>Phone</type>
</CustomField>