force-app/main/default/objects/Natterbox_Call_Reporting_Object__c/fields/E164CalledNumber__c.field-meta.xml
<CustomField>
    <fullName>E164CalledNumber__c</fullName>
    <description>The Number that was called in International format.</description>
    <inlineHelpText>The number that was called in E164 format (E164 format will always begin with the country code of the called number, then the full number without the leading zero. For example, 07881943075 will become 447881943075).</inlineHelpText>
    <label>E164CalledNumber</label>
    <type>Phone</type>
</CustomField>