force-app/main/default/objects/Natterbox_Call_Reporting_Object__c/fields/E164CalledNumberIn__c.field-meta.xml
<CustomField>
    <fullName>E164CalledNumberIn__c</fullName>
    <description>This is the number that the caller called to enter the Natterbox service but in international format.</description>
    <inlineHelpText>This is the number that the caller called to enter the Natterbox service but in E164 format. This will almost always be the same as &apos;CalledNumber&apos; which should be used instead of this macro.</inlineHelpText>
    <label>E164CalledNumberIn</label>
    <type>Phone</type>
</CustomField>