force-app/main/default/objects/Natterbox_Call_Reporting_Object__c/fields/E164ConnectedNumber__c.field-meta.xml
<CustomField>
    <fullName>E164ConnectedNumber__c</fullName>
    <description>If the call was passed out of the Natterbox service to a PSTN number, it is this number that was dialled - in international format.</description>
    <inlineHelpText>The number of the call recipient in E164 format. If the call is answered by a Natterbox user, this field will be left blank. For details on numbers answered by Natterbox users, use the ConnectedNumber field instead.</inlineHelpText>
    <label>E164ConnectedNumber</label>
    <type>Phone</type>
</CustomField>