force-app/main/default/objects/Natterbox_Call_Reporting_Object__c/fields/E164DiversionNumber__c.field-meta.xml
<CustomField>
    <fullName>E164DiversionNumber__c</fullName>
    <description>If the number was diverted be a previous telco and they make available the diversion information, it will be placed here.</description>
    <inlineHelpText>Prior to the call reaching Natterbox, if one of the previous telcos in the chain diverted the number, this diversion number will appear here in E146 format. If this information is not supplied by the other telcos, this field will be left blank.</inlineHelpText>
    <label>E164DiversionNumber</label>
    <type>Phone</type>
</CustomField>