force-app/main/default/objects/Natterbox_Call_Reporting_Object__c/fields/ExternalConnectedNumber__c.field-meta.xml
<CustomField>
    <fullName>ExternalConnectedNumber__c</fullName>
    <description>If the inbound call was connected to an external PSTN number rather than a user. This number will be shown here.</description>
    <inlineHelpText>This field is no longer used and will be removed in an upcoming release.</inlineHelpText>
    <label>ExternalConnectedNumber</label>
    <type>Phone</type>
</CustomField>