force-app/main/default/objects/Natterbox_Call_Reporting_Object__c/fields/HangupCause__c.field-meta.xml
<CustomField>
    <fullName>HangupCause__c</fullName>
    <description>The reason that the call finished.</description>
    <inlineHelpText>This is the reason the call was terminated. This field will be useful in showing any potential call errors.</inlineHelpText>
    <label>HangupCause</label>
    <length>100</length>
    <type>Text</type>
</CustomField>