force-app/main/default/objects/Natterbox_Call_Reporting_Object__c/fields/HomeCountryCode__c.field-meta.xml
<CustomField>
    <fullName>HomeCountryCode__c</fullName>
    <description>The counrty code of the user that made or received the call. For example, UK would be 44.</description>
    <inlineHelpText>This is the home country code of the Natterbox user involved in the call. This is the 2 or 3 digit numeric dialling code for that country. For example, for the UK, this would be &#39;44&#39;.</inlineHelpText>
    <label>HomeCountryCode</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>