force-app/main/default/objects/Natterbox_Call_Reporting_Object__c/fields/Last_Bridge_to_UUID__c.field-meta.xml
<CustomField>
    <fullName>Last_Bridge_to_UUID__c</fullName>
    <inlineHelpText>Internal Use Only. If a call is bridged. This is the unique identifier to the call leg that was handed on to Natterbox.</inlineHelpText>
    <label>Last Bridge to UUID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>