force-app/main/default/objects/Natterbox_Call_Reporting_Object__c/fields/Last_Bridge_UUID__c.field-meta.xml
<CustomField>
    <fullName>Last_Bridge_UUID__c</fullName>
    <inlineHelpText>Internal Use Only. If multiple bridging calls are made, this is the unique identifier of the last bridged call leg.</inlineHelpText>
    <label>Last Bridge UUID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>