force-app/main/default/objects/Natterbox_Call_Reporting_Object__c/fields/Month_of_the_Year__c.field-meta.xml
<CustomField>
    <fullName>Month_of_the_Year__c</fullName>
    <inlineHelpText>This is the month of the year that the call took place. This is the text version of the month. For example, January, February, March, etc,</inlineHelpText>
    <label>Month of the Year</label>
    <length>20</length>
    <type>Text</type>
</CustomField>