force-app/main/default/objects/Natterbox_Call_Reporting_Object__c/fields/NEW_Date__c.field-meta.xml
<CustomField>
    <fullName>NEW_Date__c</fullName>
    <inlineHelpText>This is the hour of the day in numeric format. For example, if the call was made at 4:35pm , this will show &#39;16&#39;.</inlineHelpText>
    <label>Hour of the Day</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>