force-app/main/default/objects/Natterbox_Call_Reporting_Object__c/fields/Number_of_Transfers__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Transfers__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Indicates the number of times that the call was transferred.</inlineHelpText>
    <label>Number of Transfers</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>