force-app/main/default/objects/Natterbox_Call_Reporting_Object__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>If Natterbox was able to find the phone number in the Opportunity table within Saleforce, the corresponding link to that Opportunity will be placed here.</inlineHelpText>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Natterbox Call Reporting Object</relationshipLabel>
    <relationshipName>Natterbox_Call_Reporting_Object</relationshipName>
    <type>Lookup</type>
</CustomField>