force-app/main/default/objects/Natterbox_Call_Reporting_Object__c/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The SalesForce user that owns this call record (If applicable)</description>
    <inlineHelpText>Natterbox will attempt to link the Natterbox user to a corresponding user in Salesforce. If this link is successful, the user in Salesforce that was responsible for the call will be listed here. If no user in Salesforce could be found, this will be blank.</inlineHelpText>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Customer_Service_Calls</relationshipName>
    <type>Lookup</type>
</CustomField>