force-app/main/default/objects/Natterbox_Call_Reporting_Object__c/fields/Recording__c.field-meta.xml
<CustomField>
    <fullName>Recording__c</fullName>
    <description>A URL link to the call recording (if one was made)</description>
    <inlineHelpText>This is the link to the audio recording on the Nattebox cloud storage system. Please note that further authentication may be required to access the recording.</inlineHelpText>
    <label>Recording</label>
    <type>Url</type>
</CustomField>