force-app/main/default/objects/Natterbox_Call_Reporting_Object__c/fields/RelatedContact__c.field-meta.xml
<CustomField>
    <fullName>RelatedContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The contact that this call is related to (if applicable)</description>
    <inlineHelpText>If Natterbox was able to find the phone number in the contact table within Saleforce, the corresponding link to that contact will be placed here.</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Natterbox Call Reporting Object</relationshipLabel>
    <relationshipName>Customer_Service_Calls</relationshipName>
    <type>Lookup</type>
</CustomField>