force-app/main/default/objects/Natterbox_Call_Reporting_Object__c/fields/Timezone_Offset__c.field-meta.xml
<CustomField>
    <fullName>Timezone_Offset__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This field will contain the timezone offset from UTC for the user who made/received the call at the time the call was made. The default value for this field is zero until updated by the NCRO trigger Rule (v8.5 onwards)</description>
    <inlineHelpText>This field will contain the timezone offset From UTC for the user who made/received the call at the time the call was made. The default value for this field is zero until updated by the NCRO trigger Rule (v8.5 onwards)</inlineHelpText>
    <label>Timezone Offset</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>