force-app/main/default/objects/Natterbox_Call_Reporting_Object__c/fields/UUID__c.field-meta.xml
<CustomField>
    <fullName>UUID__c</fullName>
    <description>The unique identifier for the call.</description>
    <inlineHelpText>This is the unique identifier for the call supplied by Natterbox. This can be used to identify the corresponding call data on the Natterbox system.</inlineHelpText>
    <label>UUID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>