force-app/main/default/objects/Natterbox_Call_Reporting_Object__c/fields/Wrapup_String_1__c.field-meta.xml
<CustomField>
    <fullName>Wrapup_String_1__c</fullName>
    <inlineHelpText>The first Wrapup String entered by the user on the Natterbox CTI.</inlineHelpText>
    <label>Wrapup String 1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>