force-app/main/default/objects/Natterbox_Call_Reporting_Object__c/fields/Wrapup_Time__c.field-meta.xml
<CustomField>
    <fullName>Wrapup_Time__c</fullName>
    <description>If the agent was using the Natterbox CTI, this is the amount of time between the call being completed and the agent pressing the &apos;Done&apos; button on the CTI. If the agent is not making use of the CTI, this field will be left blank.</description>
    <inlineHelpText>If the agent was using the Natterbox CTI, this is the amount of time between the call being completed and the agent pressing the &apos;Done&apos; button on the CTI. If the agent is not making use of the CTI, this field will be left blank.</inlineHelpText>
    <label>Wrapup Time</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>