force-app/main/default/objects/Natterbox_Call_Reporting_Object__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>Call_Start_Date_Time__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Owner__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>